bug 536374 - Places history changes due to async expiration (Port bug 520165), r+sr=Neil