suite/profile/migration/src/nsThunderbirdProfileMigrator.cpp
@@ -295,7 +295,6 @@ nsThunderbirdProfileMigrator::PrefTransform gTransforms[] = {
   MAKESAMETYPEPREFTRANSFORM("browser.display.use_document_colors",     Bool),
   MAKESAMETYPEPREFTRANSFORM("browser.display.use_document_fonts",      Bool),
   MAKESAMETYPEPREFTRANSFORM("browser.enable_automatic_image_resizing", Bool),
-  MAKESAMETYPEPREFTRANSFORM("browser.history_expire_days",             Int),
   MAKESAMETYPEPREFTRANSFORM("browser.tabs.autoHide",                   Bool),
   MAKESAMETYPEPREFTRANSFORM("browser.tabs.loadInBackground",           Bool),
   MAKESAMETYPEPREFTRANSFORM("browser.underline_anchors",               Bool),
